--- a/pinn-workflow/train_colab.ipynb
+++ b/pinn-workflow/train_colab.ipynb
@@ -388,8 +388,228 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "60253cc8",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "/content/Basic-PiNN-Model-For-Three-Layered-Collision\n"
+          ]
+        }
+      ],
+      "source": [
+        "%cd /content/Basic-PiNN-Model-For-Three-Layered-Collision"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "id": "a6ab5e4a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Traceback (most recent call last):\n",
+            "  File \"/content/Basic-PiNN-Model-For-Three-Layered-Collision/compare_results.py\", line 8, in <module>\n",
+            "    import config\n",
+            "ModuleNotFoundError: No module named 'config'\n"
+          ]
+        }
+      ],
+      "source": [
+        "!python compare_results.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "36703733",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loading FEA Solution...\n"
+          ]
+        },
+        {
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'fea_solution.npy'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-510501614.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    148\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m     \u001b[0mcompare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-510501614.py\u001b[0m in \u001b[0;36mcompare\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcompare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Loading FEA Solution...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"fea_solution.npy\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mX_fea\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# (nx, ny, nz)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mY_fea\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'y'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/numpy/lib/_npyio_impl.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    453\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    454\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 455\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    456\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    457\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'fea_solution.npy'"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import torch\n",
+        "import sys\n",
+        "\n",
+        "import pinn_config as config\n",
+        "import model\n",
+        "from scipy.interpolate import RegularGridInterpolator\n",
+        "\n",
+        "def compare():\n",
+        "    print(\"Loading FEA Solution...\")\n",
+        "    data = np.load(\"fea_solution.npy\", allow_pickle=True).item()\n",
+        "    X_fea = data['x'] # (nx, ny, nz)\n",
+        "    Y_fea = data['y']\n",
+        "    Z_fea = data['z']\n",
+        "    U_fea = data['u'] # (nx, ny, nz, 3)\n",
+        "    \n",
+        "    # Grid axes\n",
+        "    x_axis = X_fea[:, 0, 0]\n",
+        "    y_axis = Y_fea[0, :, 0]\n",
+        "    z_axis = Z_fea[0, 0, :]\n",
+        "    \n",
+        "    print(f\"FEA Grid: {len(x_axis)}x{len(y_axis)}x{len(z_axis)}\")\n",
+        "    \n",
+        "    # 1. Generate PINN Predictions on same Grid\n",
+        "    if torch.cuda.is_available():\n",
+        "        device = torch.device('cuda')\n",
+        "    elif torch.backends.mps.is_available():\n",
+        "        device = torch.device('mps')\n",
+        "    else:\n",
+        "        device = torch.device('cpu')\n",
+        "    pinn = model.MultiLayerPINN().to(device)\n",
+        "    model_path = \"pinn_model.pth\"\n",
+        "    if not os.path.exists(model_path):\n",
+        "        # Check in pinn-workflow directory\n",
+        "        potential_path = os.path.join(os.path.dirname(__file__), 'pinn-workflow', 'pinn_model.pth')\n",
+        "        if os.path.exists(potential_path):\n",
+        "            model_path = potential_path\n",
+        "\n",
+        "    try:\n",
+        "        pinn.load_state_dict(torch.load(model_path, map_location=device, weights_only=True))\n",
+        "        print(f\"Loaded PINN model from {model_path}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"PINN model not found or error loading: {e}\")\n",
+        "        return\n",
+        "        \n",
+        "    pinn.eval()\n",
+        "    \n",
+        "    pts = np.stack([X_fea.ravel(), Y_fea.ravel(), Z_fea.ravel()], axis=1) # (N, 3)\n",
+        "    \n",
+        "    # We need to query layer-wise because PINN takes layer_idx\n",
+        "    # Layer interfaces: 0, 0.033, 0.066, 0.1\n",
+        "    # Z coordinate determines layer\n",
+        "    z_flat = pts[:, 2]\n",
+        "    \n",
+        "    # Masks\n",
+        "    eps = 1e-5\n",
+        "    mask1 = (z_flat >= config.Layer_Interfaces[0] - eps) & (z_flat <= config.Layer_Interfaces[1] + eps)\n",
+        "    mask2 = (z_flat >= config.Layer_Interfaces[1] - eps) & (z_flat <= config.Layer_Interfaces[2] + eps)\n",
+        "    mask3 = (z_flat >= config.Layer_Interfaces[2] - eps) & (z_flat <= config.Layer_Interfaces[3] + eps)\n",
+        "    \n",
+        "    # Prioritize higher layers for overlaps (standard practice or arbitrary)\n",
+        "    # Actually, interfaces match, so just pick one.\n",
+        "    mask2 = mask2 & (~mask1) # simple exclusivity cleanup if needed, but overlap is fine if continuous\n",
+        "    # Better: strict intervals\n",
+        "    m1 = z_flat <= config.Layer_Interfaces[1]\n",
+        "    m2 = (z_flat > config.Layer_Interfaces[1]) & (z_flat <= config.Layer_Interfaces[2])\n",
+        "    m3 = z_flat > config.Layer_Interfaces[2]\n",
+        "    \n",
+        "    U_pinn_flat = np.zeros_like(pts)\n",
+        "    \n",
+        "    with torch.no_grad():\n",
+        "        # Layer 1\n",
+        "        p1 = torch.tensor(pts[m1], dtype=torch.float32).to(device)\n",
+        "        if len(p1) > 0:\n",
+        "            U_pinn_flat[m1] = pinn(p1, 0).cpu().numpy()\n",
+        "            \n",
+        "        # Layer 2\n",
+        "        p2 = torch.tensor(pts[m2], dtype=torch.float32).to(device)\n",
+        "        if len(p2) > 0:\n",
+        "            U_pinn_flat[m2] = pinn(p2, 1).cpu().numpy()\n",
+        "            \n",
+        "        # Layer 3\n",
+        "        p3 = torch.tensor(pts[m3], dtype=torch.float32).to(device)\n",
+        "        if len(p3) > 0:\n",
+        "            U_pinn_flat[m3] = pinn(p3, 2).cpu().numpy()\n",
+        "            \n",
+        "    U_pinn = U_pinn_flat.reshape(U_fea.shape)\n",
+        "    \n",
+        "    # 2. Compute Metrics\n",
+        "    # U_z at top surface\n",
+        "    u_z_fea_top = U_fea[:, :, -1, 2]\n",
+        "    u_z_pinn_top = U_pinn[:, :, -1, 2]\n",
+        "    \n",
+        "    abs_diff = np.abs(u_z_fea_top - u_z_pinn_top)\n",
+        "    mae = np.mean(abs_diff)\n",
+        "    max_err = np.max(abs_diff)\n",
+        "    \n",
+        "    print(f\"Comparison Results (Top Surface u_z):\")\n",
+        "    print(f\"MAE: {mae:.6f}\")\n",
+        "    print(f\"Max Error: {max_err:.6f}\")\n",
+        "    print(f\"Peak Deflection FEA: {u_z_fea_top.min():.6f}\")\n",
+        "    print(f\"Peak Deflection PINN: {u_z_pinn_top.min():.6f}\")\n",
+        "    \n",
+        "    # 3. Plots\n",
+        "    fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
+        "    \n",
+        "    # Contours\n",
+        "    # FEA\n",
+        "    c1 = axes[0].contourf(X_fea[:,:,0], Y_fea[:,:,0], u_z_fea_top, levels=50, cmap='jet')\n",
+        "    axes[0].set_title(\"FEA Displacement u_z (Top)\")\n",
+        "    plt.colorbar(c1, ax=axes[0])\n",
+        "    \n",
+        "    # PINN\n",
+        "    c2 = axes[1].contourf(X_fea[:,:,0], Y_fea[:,:,0], u_z_pinn_top, levels=50, cmap='jet')\n",
+        "    axes[1].set_title(\"PINN Displacement u_z (Top)\")\n",
+        "    plt.colorbar(c2, ax=axes[1])\n",
+        "    \n",
+        "    # Error\n",
+        "    c3 = axes[2].contourf(X_fea[:,:,0], Y_fea[:,:,0], abs_diff, levels=50, cmap='magma')\n",
+        "    axes[2].set_title(\"Absolute Error |FEA - PINN|\")\n",
+        "    plt.colorbar(c3, ax=axes[2])\n",
+        "    \n",
+        "    plt.savefig(\"comparison_top.png\")\n",
+        "    print(\"Saved comparison_top.png\")\n",
+        "    \n",
+        "    # Cross section\n",
+        "    # y index middle\n",
+        "    mid_y = U_fea.shape[1] // 2\n",
+        "    \n",
+        "    xz_X = X_fea[:, mid_y, :]\n",
+        "    xz_Z = Z_fea[:, mid_y, :]\n",
+        "    xz_Uz_fea = U_fea[:, mid_y, :, 2]\n",
+        "    xz_Uz_pinn = U_pinn[:, mid_y, :, 2]\n",
+        "    \n",
+        "    fig2, axes2 = plt.subplots(1, 2, figsize=(15, 6))\n",
+        "    \n",
+        "    c4 = axes2[0].contourf(xz_X, xz_Z, xz_Uz_fea, levels=50, cmap='jet')\n",
+        "    axes2[0].set_title(\"FEA Cross Section u_z\")\n",
+        "    plt.colorbar(c4, ax=axes2[0])\n",
+        "    \n",
+        "    c5 = axes2[1].contourf(xz_X, xz_Z, xz_Uz_pinn, levels=50, cmap='jet')\n",
+        "    axes2[1].set_title(\"PINN Cross Section u_z\")\n",
+        "    plt.colorbar(c5, ax=axes2[1])\n",
+        "    \n",
+        "    plt.savefig(\"comparison_cross_section.png\")\n",
+        "    print(\"Saved comparison_cross_section.png\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    compare()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "43b3b692",
       "metadata": {},
       "outputs": [],
       "source": []
@@ -400,18 +620,6 @@
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.12.12"
     }
   },
   "nbformat": 4,
